# computer-vision

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
modules/core/: CMakeLists.txt
modules/core/include/: frame.h  json_serializable.h  metadata.h  object.h  pixel_object.h  pixel_target.h  shadow.h  target.h
modules/core/src/: camera.cpp  frame.cpp  object.cpp  pixel_target.cpp  target.cpp
modules/imgimport/: CMakeLists.txt
modules/imgimport/include/: DeckLinkCapture.h  video_import.h
modules/imgimport/src/: decklink_import.cpp  metadata_input.cpp  metadata_reader.cpp  pictureimport.cpp  video_import.cpp
modules/network/: CMakeLists.txt
modules/network/include/: connection.h  network_manager.h
modules/network/src/: connection.cpp  network_manager.cpp
modules/network/test/: CMakeLists.txt  network_manager_test.cpp
modules/targetanalysis/: CMakeLists.txt
modules/targetanalysis/include/: gps.h  object_list.h  pixel_object_list.h  target_analyzer.h
modules/targetanalysis/src/: gps.cpp  object_list.cpp  pixel_object_list.cpp  target_analyzer.cpp  target_loader.cpp
modules/targetanalysis/test/: CMakeLists.txt  gps_point_test.cpp  gps_test.cpp  test.cpp  unique_po_test.cpp
modules/targetid/: CMakeLists.txt
modules/targetid/include/: blob_filter.h  target_identifier.h
modules/targetid/src/: blob_filter.cpp  object_detector.cpp  target_identifier.cpp
modules/targetid/test/: CMakeLists.txt  hist_test.cpp  interactive.cpp  ml_train.cpp  test.cpp
testdata/negatives/: negatives.lst
testdata/positives/: positives.lst
